# elkernel

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  elKernel.sln  elkernel.lds  krnln.boot.vcxproj  krnln.core.downlevel.vcxproj  krnln.core.downlevel.vcxproj.filters  krnln.core.lib.vcxproj  krnln.core.lib.vcxproj.filters  krnln.core.main.vcxproj  krnln.core.vcxproj  krnln.core.vcxproj.filters  krnln.downlevel.lib.vcxproj  krnln.downlevel.lib.vcxproj.filters  krnln.floppy.mk.vcxproj
.github/workflows/: nightly.yml
boot/: README.md  boot.cmake  boot.ld  link.ld  startup.s
driver/: README.md
legacy/: boot.ld  startup.s
source/: eapp.c  elkernel.e  startup.asm
source/common/: stdint.h
source/include/: eapp.h  stdafx.h  stdint.h
source/krnln.boot/: bootsect.asm
source/krnln.boot.stripper/: stripper.bak  stripper.e
source/krnln.core/: eappinfo.h  elib.h  krnl_MCallDllCmd.c  krnl_MCallLibCmd.c  krnl_MExitProcess.c  krnl_MGetDllCmdAdr.c  krnl_MLoadBeginWin.c  krnl_MMain.c  krnl_MMalloc.c  krnl_MMessageLoop.c  (+8 more)
source/krnln.core.downlevel/: kdevice_keyboard.c  kmemory.c  vkcode.h
source/krnln.core.lib/: krnl_MCallKrnlLibCmd.c  krnl_MFree.c  krnl_MMain.c  krnl_MMalloc.c  krnl_MMallocNoCheck.c  krnl_MOtherHelp.c  krnl_MRealloc.c  krnl_ProcessNotifyLib.c  krnln_fnToInt.c  spec_ProcessNotifyLib.c  stdafx.h
source/krnln.core.main/: krnln.core.main.e
src/: eapp.cmake  eapp.h  eapp.s  eint.h  ekrnln.c  ekrnln.cmake  ekrnln.h  elkernel.cmake  elkernel.e  elkernel.ld  link.ld  startup.s
tools/: make-bootimg-ld.py  make-bootimg.py  patch-symbol.py
(+4 files in other folders)
